# decomp-search

./: LICENSE-APACHE  LICENSE-MIT  README.md  bench_embed.py  pyproject.toml  solvability_sweep.py
.claude/skills/decomp-search/: SKILL.md
dsearch/: cli.py  db.py  embed.py  ingest_dtk.py  normalize.py  sync.py
eval/: known_pairs.json
